# web-cli

./: .gitignore  BUILD  Dockerfile  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-web-cli  go.mod  go.sum  main.go
.github/workflows/: go-release.yml  go-test.yml  superlinter.yml
api/: regen.bash
api/proto/: BUILD.bazel  web-cli.proto
cmd/: BUILD.bazel  describe.go  describe_test.go  getfeed.go  list.go  root.go  serve.go
grpc/client/: BUILD.bazel  client.go  webcliclient.go
grpc/server/: BUILD.bazel  server.go
hack/: test_json_api.sh
