load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["webcliclient.go"],
    importpath = "github.com/codemanufaktur/web-cli/grpc/client",
    visibility = ["//visibility:public"],
    deps = [
        "//api/generated/proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
    ],
)
